commo estas help

--- a/views/main.jade
+++ b/views/main.jade
@@ -16,7 +16,7 @@ html
           a.btn.entero(href='https://www.facebook.com/uninver/?skip_nax_wizard=true', title='login') Iniciar
 
     header.portada
-      h1 ENCUENTRA TUS EXAMENES AQUI
+      h1 Esto es mi exameplo
    ul.producto
       h2#uni.dia_titulo Univercidad nacional Jorge Basadre G
       ul.prim
@@ -24,17 +24,17 @@ html
           img(src='http://image.flaticon.com/icons/svg/136/136521.svg', alt='')
           h3 Practica de Formulacion de Problemas Lineales
           span.price gratis
-          a.btn-add(href='https://es.scribd.com/document/332392208/Practica-de-Formulacion-de-Problemas-Lineales?secret_password=n3OXslD2lAqzZzz9DOI3') Ver
+          a.btn-add(href='') Ver
         li
           img(src='http://image.flaticon.com/icons/svg/136/136521.svg', alt='')
           h3 Silabos de Metodologia de La Investigacion
           span.price gratis
-          a.btn-add(href='https://es.scribd.com/document/332392436/Silabos-de-Metodologia-de-La-Investigacion') Ver
+          a.btn-add(href='') Ver
         li
           img(src='http://image.flaticon.com/icons/svg/136/136521.svg', alt='')
           h3 SILABO de Investigacion Operativa I 2016
           span.price gratis
-          a.btn-add(href='https://es.scribd.com/document/332393135/SILABO-de-Investigacion-Operativa-I-2016') Ver
+          a.btn-add(href='') Ver
         li
           img(src='http://image.flaticon.com/icons/svg/136/136521.svg', alt='')
           h3 SEGUNDO EXAMEN PARCIAL DE INGENIERIA WEB
@@ -45,13 +45,13 @@ html
           img(src='http://image.flaticon.com/icons/svg/136/136521.svg', alt='')
           h3 Silabo Dinámica de Sistemas 
           span.price gratis
-          a.btn-add(href='https://es.scribd.com/document/332394352/Silabo-Dinamica-de-Sistemas') Ver
+          a.btn-add(href='') Ver
       ul.prim
         li
           img(src='http://image.flaticon.com/icons/svg/136/136521.svg', alt='')
           h3 Sílabo IngSoft II 2015 
           span.price gratis
-          a.btn-add(href='https://es.scribd.com/document/332394558/Silabo-IngSoft-II-2015') Ver
+          a.btn-add(href='') Ver
         li
           img(src='http://image.flaticon.com/icons/svg/136/136521.svg', alt='')
           h3 EXAMEN PARCIAL DE INGENIRIA DE SOFTWARE
@@ -62,28 +62,28 @@ html
           img(src='http://image.flaticon.com/icons/svg/136/136521.svg', alt='')
           h3 EXAMEN LEGISLACION INFORMATICA 
           span.price gratis
-          a.btn-add(href='https://es.scribd.com/document/332394875/EXAMEN-LEGISLACION-INFORMATICA') Ver
+          a.btn-add(href='') Ver
         li
           img(src='http://image.flaticon.com/icons/svg/136/136521.svg', alt='')
           h3 Silabo Sistemas de Informacion
           span.price gratis
-          a.btn-add(href='https://es.scribd.com/document/332395065/Silabo-Sistemas-de-Informacion') Ver
+          a.btn-add(href='') Ver
         li
           img(src='http://image.flaticon.com/icons/svg/136/136521.svg', alt='')
           h3 PARCIAL DE SEGURIDAD INFORMATICA
           span.price gratis
-          a.btn-add(href='https://es.scribd.com/document/332395271/PARCIAL-DE-SEGURIDAD-INFORMATICA') Ver
+          a.btn-add(href='') Ver
       ul.prim
         li
           img(src='http://image.flaticon.com/icons/svg/136/136521.svg', alt='')
           h3 Segunda Practica DINÁMICA DE SISTEMAS
           span.price gratis
-          a.btn-add(href='https://es.scribd.com/document/332395610/Segunda-Practica-DINAMICA-DE-SISTEMAS') Ver
+          a.btn-add(href='') Ver
         li
           img(src='http://image.flaticon.com/icons/svg/136/136521.svg', alt='')
           h3 Examen Auditoria de Sistemas
           span.price gratis
-          a.btn-add(href='https://es.scribd.com/document/332395767/Examen-Auditoria-de-Sistemas') Ver
+          a.btn-add(href='') Ver
         li
           img(src='http://image.flaticon.com/icons/svg/136/136521.svg', alt='')
           h3 SEGUNDO EXAMEN DE SISTEMAS EXPERTOS
@@ -94,31 +94,31 @@ html
           img(src='http://image.flaticon.com/icons/svg/136/136521.svg', alt='')
           h3 Examen de Seminario de Etica y Sociedad
           span.price gratis
-          a.btn-add(href='https://es.scribd.com/document/332396074/Examen-de-Seminario-de-Etica-y-Sociedad') Ver
+          a.btn-add(href='') Ver
         li
           img(src='http://image.flaticon.com/icons/svg/136/136521.svg', alt='')
           h3 Examen Parcial de Programación Paralela 
           span.price gratis
-          a.btn-add(href='https://es.scribd.com/document/332396431/Examen-Parcial-de-Programacion-Paralela') Ver
+          a.btn-add(href='') Ver
       ul.prim
         li
           img(src='http://image.flaticon.com/icons/svg/136/136521.svg', alt='')
           h3 INFORME FINAL Carga Electrica y Ley de Coulond
           |  S/
           span.price 0
-          a.btn-add(href='https://es.scribd.com/document/332396572/INFORME-FINAL-Carga-Electrica-y-Ley-de-Coulond') Ver
+          a.btn-add(href='') Ver
         li
           img(src='http://image.flaticon.com/icons/svg/136/136521.svg', alt='')
           h3 Monografia FINAL de Mate1
           |  S/
           span.price 0
-          a.btn-add(href='https://es.scribd.com/document/332396904/Monografia-FINAL-de-Mate1') Ver
+          a.btn-add(href='') Ver
         li
           img(src='http://image.flaticon.com/icons/svg/136/136521.svg', alt='')
           h3 SEGUNDO EXAMEN DE BASE DE DATOS
           |  S/
           span.price 0
-          a.btn-add(href='https://es.scribd.com/document/332397400/PARCIAL-Base-de-Datos') Ver
+          a.btn-add(href='') Ver
         li
           img(src='http://image.flaticon.com/icons/svg/136/136521.svg', alt='')
           h3 EXAMEN PARCIAL DE COMUNICACION DE DATOS
