--- a/views/main.jade
+++ b/views/main.jade
@@ -16,9 +16,9 @@ html
           a.btn.entero(href='https://www.facebook.com/uninver/?skip_nax_wizard=true', title='login') Iniciar
 
     header.portada
-      h1 Esto es mi exameplo
+      h1 Esto es mi exameplo 2012
    ul.producto
-      h2#uni.dia_titulo Univercidad nacional Jorge Basadre G
+      h2#uni.dia_titulo titulo
       ul.prim
         li
           img(src='http://image.flaticon.com/icons/svg/136/136521.svg', alt='')
